Test stock and ingredient, finish refactor code